add form errors
closes: #7

--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -44,5 +44,15 @@
                 background-color: #dbdbdb;
             }
         }
+
+        &__is-invalid {
+            border-color: red;
+        }
+
+        &__invalid-feedback {
+            margin: 0.5rem 0 0 0;
+            font-size: 1.3rem;
+            color: red;
+        }
     }
 }
